# bonnie-32

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PS1_TEXTURE_COMPARISON.md  README.md  THIRD_PARTY.md  bonnie-32.wasm  bonnie-engine.wasm  build.rs  index.html
.github/workflows/: deploy-dev.yml  deploy.yml  release.yml
assets/assets/: asset_001.ron  asset_002.ron  asset_003.ron
assets/levels/: level.ron  level_001.ron  level_002.ron  level_003.ron  level_004.ron  level_005.ron  level_006.ron  level_007.ron  level_008.ron  level_009.ron  level_010.ron  manifest.txt  untitled.ron
assets/models/: manifest.txt  model_001.ron  model_002.ron  model_003.ron  model_004.ron  model_005.ron  model_006.ron  model_007.ron  model_009.ron  model_010.ron  model_011.ron  model_012.ron  model_013.ron  untitled.ron
assets/samples/assets/: manifest.txt
assets/samples/levels/: Sewers.ron  West.ron  level_003.ron  level_006.ron  manifest.txt
assets/samples/meshes/: manifest.txt
assets/samples/texture-packs/: manifest.txt
assets/samples/texture-packs/crates/: manifest.txt
assets/samples/texture-packs/dark-fantasy-townhouse/: manifest.txt
assets/samples/texture-packs/quake-like/: manifest.txt
assets/samples/texture-packs/retro-texture-pack/: manifest.txt
assets/samples/texture-packs/sanaart-tiles/: manifest.txt
assets/samples/textures/: manifest.txt  texture_002.ron  texture_005.ron
assets/songs/: manifest.txt  song_001.ron
assets/textures/: manifest.txt
assets/textures-user/: texture.ron  texture_001.ron  texture_002.ron  texture_004.ron  texture_005.ron  texture_006.ron  texture_007.ron  texture_008.ron
assets/userdata/assets/: asset_001.ron  asset_002.ron
assets/userdata/levels/: level_001.ron  level_002.ron  manifest.txt
assets/userdata/songs/: song_004.ron
assets/userdata/textures/: manifest.txt  texture_009.ron  texture_010.ron
dev/: audio-processor.js  bonnie-engine.wasm  index.html
dev/assets/assets/: asset_003.ron
dev/assets/levels/: level_001.ron  level_003.ron  level_004.ron  level_005.ron  level_006.ron  level_007.ron  level_008.ron  manifest.txt
dev/assets/meshes/: manifest.txt
dev/assets/models/: model_001.ron  model_005.ron
dev/assets/samples/levels/: Dungeon.ron
dev/assets/samples/texture-packs/64x-opengameart/: manifest.txt
dev/assets/samples/texture-packs/dark-military-fantasy/: manifest.txt
dev/assets/samples/texture-packs/low-poly-64x64/: manifest.txt
dev/assets/samples/textures/: texture_006.ron  texture_007.ron
dev/assets/songs/: manifest.txt  song_002.bsong  song_003.ron
dev/assets/textures/: manifest.txt
dev/assets/textures-user/: texture_001.ron  texture_002.ron  texture_008.ron
dev/assets/userdata/levels/: level_006.ron
dev/assets/userdata/songs/: manifest.txt
docs/: ARCHITECTURE.md  MODELER_DESIGN.md  README.md  bonnie-engine.wasm  bonnie-rs.wasm  index.html  spu-loop-alignment.md
src/: app.rs  landing.rs  main.rs  mcp_server.rs  project.rs  scene.rs
src/asset/: asset.rs  component.rs  library.rs  mod.rs
src/auth/: mod.rs
src/editor/: actions.rs  example_browser.rs  example_levels.rs  grid_view.rs  layout.rs  level_browser.rs  mod.rs  sample_levels.rs  state.rs  texture_pack.rs  texture_palette.rs  viewport_3d.rs
src/game/: collision.rs  component.rs  components.rs  entity.rs  event.rs  mod.rs  particles.rs  renderer.rs  runtime.rs  shadows.rs  transform.rs  world.rs
src/input/: actions.rs  controller_type.rs  debug.rs  gamepad.rs  midi.rs  mod.rs  state.rs
src/mcp/: mod.rs
src/modeler/: actions.rs  layout.rs  mesh_browser.rs  mesh_editor.rs  mod.rs  model.rs  model_browser.rs  obj_import.rs  obj_importer.rs  quantize.rs  radial_menu.rs  skeleton.rs  spine.rs  state.rs  viewport.rs
src/modeler/drag/: box_select.rs  mod.rs  move_tracker.rs  rotate_tracker.rs  scale_tracker.rs
src/modeler/tools/: extrude_tool.rs  mod.rs  move_tool.rs  rotate_tool.rs  scale_tool.rs  select_tool.rs
src/rasterizer/: camera.rs  constants.rs  draw.rs  fixed.rs  math.rs  mod.rs  ray.rs  render.rs  types.rs
src/storage/: async_ops.rs  gcp.rs  local.rs  mod.rs
src/texture/: import.rs  mod.rs  texture_editor.rs  texture_library.rs  user_texture.rs
src/tracker/: actions.rs  audio.rs  io.rs  layout.rs  mod.rs  pattern.rs  psx_reverb.rs  song_browser.rs  state.rs
src/tracker/spu/: adpcm.rs  convert.rs  mod.rs  pipeline_test.rs  reverb.rs  tables.rs  types.rs  voice.rs
src/ui/: actions.rs  drag_tracker.rs  icons.rs  input.rs  mod.rs  panel.rs  rect.rs  tabbar.rs  text_input.rs  theme.rs  tool.rs  tool_box.rs  tool_controller.rs  widgets.rs
src/world/: geometry.rs  level.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+1 files in other folders)
