[package]
name = "bonnie-engine"
version = "0.1.3"
edition = "2021"
description = "PS1-style software rasterizer engine"
authors = ["ebonura"]
default-run = "bonnie-engine"

[[bin]]
name = "bonnie-engine"
path = "src/main.rs"

[[bin]]
name = "bonnie-mcp"
path = "src/mcp_server.rs"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
rustysynth = "1.3"
base64 = "0.22"
# Gamepad input: Custom implementation using gilrs (native) and Web Gamepad API (WASM)
# We don't use the `gamepads` crate because it causes RefCell conflicts on WASM

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.14"
cpal = "0.15"
gilrs = "0.11"  # Native gamepad input
webbrowser = "1.0"
indicatif = "0.17"
tiny_http = "0.12"  # Lightweight HTTP server for MCP integration
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }  # HTTP client for MCP server
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
schemars = "1.0"  # For JSON schema generation (must match rmcp's version)
serde_json = "1.0"  # Required by rmcp tool macro

[profile.release]
opt-level = 3
lto = true

# Faster debug builds - critical for software rasterizer performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
