[workspace]
members = ["xtask"]

[package]
name = "bonnie-engine"
version = "0.1.5"
edition = "2021"
description = "PS1-style software rasterizer engine"
authors = ["ebonura"]

[[bin]]
name = "bonnie-engine"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
rustysynth = "1.3"
base64 = "0.22"
memory-stats = "1.2"
brotli = "8.0"  # Pure Rust compression (WASM compatible, better ratio than gzip)
# Gamepad input: Custom implementation using gilrs (native) and Web Gamepad API (WASM)
# We don't use the `gamepads` crate because it causes RefCell conflicts on WASM

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.14"
cpal = "0.15"
gilrs = "0.11"  # Native gamepad input
webbrowser = "1.0"
indicatif = "0.17"
crashlog = "0.1"  # Panic logging with backtrace

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"  # Panics to browser console

[profile.release]
opt-level = 3
lto = true

# Faster debug builds - critical for software rasterizer performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
