[workspace]
members = ["xtask"]

[package]
name = "bonnie-32"
version = "0.1.11"
edition = "2021"
description = "A fantasy console for PS1-era 3D games"
authors = ["ebonura"]

[[bin]]
name = "bonnie-32"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
rustysynth = "1.3"
base64 = "0.22"
memory-stats = "1.2"
brotli = "8.0"  # Pure Rust compression (WASM compatible, better ratio than gzip)
# Gamepad input: Custom implementation using gilrs (native) and Web Gamepad API (WASM)
# We don't use the `gamepads` crate because it causes RefCell conflicts on WASM

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.14"
cpal = "0.15"
gilrs = "0.11"  # Native gamepad input
midir = "0.10"  # Native MIDI keyboard input
webbrowser = "1.0"
indicatif = "0.17"
crashlog = "0.1"  # Panic logging with backtrace
# Native OAuth dependencies
tiny_http = "0.12"  # Local HTTP server for OAuth callback
ureq = { version = "2.10", features = ["json"] }  # Blocking HTTP client for OAuth
sha2 = "0.10"  # SHA256 for user ID hashing
rand = "0.8"  # PKCE code verifier generation
lazy_static = "1.5"  # Global token storage
serde_json = "1.0"  # JSON parsing for OAuth responses
dirs = "5.0"  # Config directory for token storage
urlencoding = "2.1"  # URL encoding for OAuth

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Note: console_error_panic_hook removed - it requires wasm-bindgen bindings
# that aren't provided by macroquad's JS bundle. Panics still show in console.

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true

# Faster debug builds - critical for software rasterizer performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
